--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.21",
-        "tslint": "^5.8.0",
+        "@types/glob": "^7.1.1",
+        "@types/mocha": "^5.2.6",
         "@types/node": "^8.10.25",
-        "@types/mocha": "^2.2.42"
+        "@types/vscode": "^1.26.0",
+        "glob": "^7.1.4",
+        "mocha": "^6.1.4",
+        "tslint": "^5.20.0",
+        "typescript": "^2.6.1",
+        "vscode-test": "^1.2.0"
     }
 }
